--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="124dp"
         android:layout_marginTop="166dp"
-        android:onClick="checkService"
+        android:onClick="startTimerManually"
         android:text="@string/button_service_check"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
